src/main/java/com/example/error/ErrorHandlerNullPointer.java
package com.example.error;

import lombok.AccessLevel;
import lombok.AllArgsConstructor;
import lombok.Data;
import lombok.NoArgsConstructor;
import lombok.experimental.FieldDefaults;

import java.time.LocalDateTime;

@Data
@NoArgsConstructor
@AllArgsConstructor
@FieldDefaults(level = AccessLevel.PRIVATE)
public class ErrorHandlerNullPointer {
	LocalDateTime timestamp;
	int status;
	String error;
	String message;
	String path;
}